# noql

./: .gitignore  BACKLOG.md  CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt  main.cpp  tests.cpp  tests.hpp
include/noql/: Adaptor.hpp  AdaptorTemplate.hpp  Connection.hpp  Exception.hpp  Function.hpp  Query.hpp  Url.hpp  Value.hpp  noql.hpp  pch.hpp
lib/: CMakeLists.txt  Connection.cpp  ExprEval.cpp  ExprEval.hpp  JsonAdaptor.cpp  JsonAdaptor.hpp  Logger.hpp  Module.cpp  Module.hpp  MongoAdaptor.cpp  MongoAdaptor.hpp  Query.cpp  noqParser.y  pch.hpp
tests/: basic001.noql  basic002.noql  basic003.noql  basic004.noql  basic005.noql  basic006.noql  expr001.noql  keyval001.noql  testArrayResult.noql
